--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="assets/places/logo.png" />
+  <link rel="icon" href="src/assets/places/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Arasi Air Travels & Tourism</title>
 </head>
